Fix: correct box out overlap
Correct highlighted boxout overlap when placed in accordion

[Task] https://app.asana.com/0/537225826752670/904446915184055/f

--- a/src/sass/_vintage_standard-styles.scss
+++ b/src/sass/_vintage_standard-styles.scss
@@ -459,10 +459,6 @@ div.no-left-nav div#lhcolumn {
   visibility: hidden;
 }
 
-#mdcolumn .boxout, #mdcolumn .boxoutAlt {
-  width:477px;
-}
-
 .wide #mdcolumn .boxout, .wide #mdcolumn .boxoutAlt  {
   width:692px;
 }
