--- a/src/sass/_vintage_york-styles.scss
+++ b/src/sass/_vintage_york-styles.scss
@@ -1705,10 +1705,6 @@ div.no-left-nav div#lhcolumn {
   visibility: hidden;
 }
 
-#mdcolumn .boxout, #mdcolumn .boxoutAlt {
-  width:477px;
-}
-
 .wide #mdcolumn .boxout, .wide #mdcolumn .boxoutAlt  {
   width:692px;
 }
